--- a/latex/beamer/group-zoop.tex
+++ b/latex/beamer/group-zoop.tex
@@ -96,8 +96,8 @@
 \setbeamercovered{invisible}
 
 
-\newcommand{\Pause}{}      %% Comment this out => lots more page breaks
-
+%\newcommand{\Pause}{\pause}      %% Comment this out => lots more page breaks
+\newcommand{\Pause}{}
 
 \begin{document}
 
@@ -3226,7 +3226,7 @@
       \node (1H) at (0,0) [v] {};
       \draw [bb] (H) to (1H);
       \node at (0,-1.3) {\small Draw $\Balert{C_2}$};
-    \end{scope}
+    \end{scope} \Pause
     %%
     %% Inflate C2
     %%
@@ -3243,7 +3243,7 @@
       \draw[faded, fill=faded] (4.5,2.7) circle (.8);
       \draw[bb] (2.25, 0.7) to (2.25,1.9);
       \node at (2.25,-1.3) {\small Inflate each node of $\Balert{C_2}$};
-    \end{scope}
+    \end{scope} \Pause
     %%
     %% C2 Cayley graph inflated, with C4 Cayley graphs in each node.
     %%
@@ -3276,7 +3276,7 @@
       \draw [r] (13) to [bend right] (10);
       \draw[bb] (2.25, 0.7) to (2.25,1.9);
       \node at (2.25,-1.3) {\small Insert $\Alert{C_4}$};
-    \end{scope}
+    \end{scope} \Pause
     %%
     %% C2 inflated, C4 inserted, but C2 popped
     %%
@@ -3303,7 +3303,7 @@
       \draw [r] (13) to [bend right] (10);
       \draw[bb] (2.25, 0.7) to (2.25,1.9);
       \node at (2.25,-1.3) {\small Pop the nodes of $\Balert{C_2}$};
-    \end{scope}
+    \end{scope} \Pause
     %%
     %% Cayley graph of C4 x C2  
     %%
@@ -3387,7 +3387,10 @@
 \end{frame}
 
 \section{The end!}
-\end{document}
+
+\begin{frame}{The end!}
+  This is the last of the slides that I have looked at slash talked about in class in MATH 312. Beyond this point there is much more interesting stuff (including in particular lovely pictures about polytopes and the alternating group), but peruse only at your own interest.
+\end{frame}
 
 %%====================================================================
 %%====================================================================
@@ -4880,7 +4883,7 @@
   \Alert{Platonic solids}.
 
   \begin{center}
-    \includegraphics[width=.8\textwidth]{platonic-solids}
+    \includegraphics[width=.8\textwidth]{platonic-solids.jpg}
   \end{center}
 
 \end{frame}
